--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,62 @@
-/home/tony/Projects/dotfiles/.tmux.conf
+# Remap C-b to C-a 
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
+# VIM NERDTree splits for windows
+bind s split-window -v
+bind i split-window -h
+unbind '"'
+unbind %
+
+# VIM movement for panes
+bind -n M-l select-pane -R
+bind -n M-k select-pane -U
+bind -n M-j select-pane -D
+bind -n M-h select-pane -L
+set -s escape-time 0
+
+# Start windows at 1 instead of 0 for ease of 
+# number row
+set -g base-index 1
+set -g pane-base-index 1
+
+######################
+### DESIGN CHANGES ###
+######################
+
+# loud or quiet?
+set -g visual-activity off
+set -g visual-bell off
+set -g visual-silence off
+setw -g monitor-activity off
+set -g bell-action none
+
+#  modes
+setw -g clock-mode-colour colour5
+setw -g mode-style 'fg=colour1 bg=colour236 bold'
+
+# panes
+set -g pane-border-style 'fg=colour16 bg=colour238'
+set -g pane-active-border-style 'bg=colour16 fg=colour5'
+
+# statusbar
+set -g status-position bottom
+set -g status-justify left
+set -g status-style 'bg=colour235 fg=colour137 dim'
+set -g status-left ''
+set -g status-right '#[fg=colour16,bg=colour247] %d/%m #[fg=colour16,bg=colour5] %H:%M:%S '
+set -g status-right-length 50
+set -g status-left-length 20
+
+setw -g window-status-current-style 'fg=colour16 bg=colour5 bold'
+setw -g window-status-current-format ' #I#[fg=colour196]:#[fg=colour16]#W#[fg=colour196]#F '
+
+setw -g window-status-style 'fg=colour9 bg=colour238'
+setw -g window-status-format ' #I#[fg=colour240]:#[fg=colour250]#W#[fg=colour244]#F '
+
+setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
+
+# messages
+set -g message-style 'fg=colour232 bg=colour16 bold'
+
