edited tmux config colors

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,6 +15,7 @@ bind -n M-k select-pane -U
 bind -n M-j select-pane -D
 bind -n M-h select-pane -L
 set -s escape-time 0
+set -g status-interval 0
 
 # Start windows at 1 instead of 0 for ease of 
 # number row
@@ -58,5 +59,7 @@ setw -g window-status-format ' #I#[fg=colour240]:#[fg=colour250]#W#[fg=colour244
 setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
 
 # messages
-set -g message-style 'fg=colour232 bg=colour16 bold'
+set -g message-style 'fg=colour137 bg=colour235 bold'
+#set -g message-style 'fg=colour232 bg=colour16 bold'
+
 
