--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,8 +4,9 @@ set-option -g prefix C-a
 bind-key C-a send-prefix
 
 # VIM NERDTree splits for windows
-bind s split-window -v
-bind i split-window -h
+bind s split-window -v -c "#{pane_current_path}"
+bind i split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
@@ -61,5 +62,10 @@ setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
 # messages
 set -g message-style 'fg=colour137 bg=colour235 bold'
 #set -g message-style 'fg=colour232 bg=colour16 bold'
+
+# True Colors Support
+set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",*256col*:Tc"
+
 
 
