--- a/.tmux.conf
+++ b/.tmux.conf
@@ -68,5 +68,5 @@ set -g message-style 'fg=colour137 bg=colour235 bold'
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 
-
+set -g mouse on
 
