--- a/.yabairc
+++ b/.yabairc
@@ -37,3 +37,4 @@ yabai -m config window_gap                   10
 # ignore certain applications
 yabai -m rule --add app="^System Preferences$" manage=off
 yabai -m rule --add app="^Olive Helps$" manage=off
+yabai -m rule --add app="^Deluge$" manage=off
