--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -34,6 +34,9 @@ window:
    columns: 100
    lines: 30
 
+  # Opacity
+  opacity: 0.7
+
   # Window position (changes require restart)
   #
   # Specified in number of pixels.
@@ -341,7 +344,7 @@ bell:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.70
+# background_opacity: 0.70
 
 #selection:
   # This string contains all characters that are used as separators for
@@ -404,7 +407,7 @@ cursor:
 #   - (Linux/BSD) user login shell
 #   - (Windows) powershell
 shell:
-  program: /usr/local/bin/zsh
+  program: /bin/zsh
   args:
     - --login
 
