--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -694,6 +694,8 @@ key_bindings:
   - { key: PageDown,  mods: Shift,   mode: ~Alt,        action: ScrollPageDown }
   - { key: Home,      mods: Shift,   mode: ~Alt,        action: ScrollToTop,   }
   - { key: End,       mods: Shift,   mode: ~Alt,        action: ScrollToBottom }
+  # Control+/ Map Forwarding
+  - { key: Slash,     mods: Control,                    chars: "\x1f"          }
 
   # Vi Mode
   # - { key: Space,  mods: Shift|Control, mode: Vi|~Search, action: ScrollToBottom          }
