--- a/.tmux.conf
+++ b/.tmux.conf
@@ -87,7 +87,7 @@ set -g message-style 'fg=colour137 bg=colour235 bold'
 #set -g message-style 'fg=colour232 bg=colour16 bold'
 
 # True Colors Support
-set -g default-terminal "xterm-256color"
+set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 
 set -g mouse on
