Enhancements to shell + weather in tmux status bar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,7 +38,6 @@ bind -n M-k select-pane -U
 bind -n M-j select-pane -D
 bind -n M-h select-pane -L
 set -s escape-time 0
-set -g status-interval 0
 
 # Start windows at 1 instead of 0 for ease of 
 # number row
@@ -65,12 +64,15 @@ set -g pane-border-style 'fg=colour16 bg=colour238'
 set -g pane-active-border-style 'bg=colour16 fg=colour202'
 
 # statusbar
+set -g status-interval 60
 set -g status-position bottom
 set -g status-justify left
 set -g status-style 'bg=colour235 fg=colour137 dim'
 set -g status-left ''
-set -g status-right '#[fg=colour16,bg=colour247] %d/%m #[fg=colour16,bg=colour202] %H:%M:%S '
-set -g status-right-length 50
+WEATHER='#(curl -s wttr.in/\?format\="%%c%%t&period=60")'
+# WEATHER='#(curl -s wttr.in/\?format\="%%l:+%%c%%20%%t%%60%%w&period=60")'
+set -g status-right "$WEATHER #[fg=colour16,bg=colour247] %d/%m #[fg=colour16,bg=colour202] %I:%M "
+set -g status-right-length 60
 set -g status-left-length 20
 
 setw -g window-status-current-style 'fg=colour16 bg=colour202 bold'
