--- a/.tmux.conf
+++ b/.tmux.conf
@@ -56,33 +56,12 @@ setw -g monitor-activity off
 set -g bell-action none
 
 #  modes
-setw -g clock-mode-colour colour202
+setw -g clock-mode-colour colour166
 setw -g mode-style 'fg=colour1 bg=colour236 bold'
 
 # panes
 set -g pane-border-style 'fg=colour16 bg=colour238'
-set -g pane-active-border-style 'bg=colour16 fg=colour202'
-
-# statusbar
-set -g status-interval 60
-set -g status-position bottom
-set -g status-justify left
-set -g status-style 'bg=colour235 fg=colour137 dim'
-set -g status-left ''
-WEATHER='#(curl -s wttr.in/\?format\="%%c%%t&period=60")'
-# WEATHER='#(curl -s wttr.in/\?format\="%%l:+%%c%%20%%t%%60%%w&period=60")'
-set -g status-right "$WEATHER #[fg=colour16,bg=colour247] %d/%m #[fg=colour16,bg=colour202] %I:%M "
-set -g status-right-length 60
-set -g status-left-length 20
-
-setw -g window-status-current-style 'fg=colour16 bg=colour202 bold'
-setw -g window-status-current-format ' #I#[fg=colour196]:#[fg=colour16]#W#[fg=colour196]#F '
-#setw -g window-status-current-format ' #I#[fg=colour202]:#[fg=colour16]#W#[fg=colour196]#F '
-
-setw -g window-status-style 'fg=colour9 bg=colour238'
-setw -g window-status-format ' #I#[fg=colour240]:#[fg=colour250]#W#[fg=colour244]#F '
-
-setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
+set -g pane-active-border-style 'bg=colour16 fg=colour166'
 
 # messages
 set -g message-style 'fg=colour137 bg=colour235 bold'
@@ -96,3 +75,33 @@ set -g mouse on
 
 set-option -g focus-events on
 
+######################
+###### Theming #######
+######################
+
+run-shell "~/.theme.tmux"
+
+# set -g @tmux_power_theme '#e95420'
+
+
+# Statusbar/Powerline
+# source /usr/share/powerline/bindings/tmux/powerline.conf
+# set -g status-interval 60
+# set -g status-position bottom
+# set -g status-justify left
+# set -g status-style 'bg=colour234 fg=colour137 dim'
+# set -g status-left ''
+# WEATHER='#(curl -s wttr.in/\?format\="%%c%%t&period=60")'
+# # WEATHER='#(curl -s wttr.in/\?format\="%%l:+%%c%%20%%t%%60%%w&period=60")'
+# set -g status-right "$WEATHER #[fg=colour16,bg=colour241] %d/%m #[fg=colour16,bg=colour166] %I:%M %p "
+# set -g status-right-length 60
+# set -g status-left-length 20
+
+# setw -g window-status-current-style 'fg=colour16 bg=colour166 bold'
+# setw -g window-status-current-format ' #I#[fg=colour196]:#[fg=colour16]#W#[fg=colour196]#F '
+# #setw -g window-status-current-format ' #I#[fg=colour166]:#[fg=colour16]#W#[fg=colour196]#F '
+
+# setw -g window-status-style 'fg=colour9 bg=colour238'
+# setw -g window-status-format ' #I#[fg=colour240]:#[fg=colour250]#W#[fg=colour244]#F '
+
+# setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
