--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -15,6 +15,9 @@
     ~/.zshrc: .zshrc
     ~/.config/nvim/coc-settings.json: coc-settings.json
     ~/.config/nvim/init.vim: init.vim
+    ~/.config/rofi/config.rasi: rofi/config.rasi
+    ~/.config/rofi/theme.rasi: rofi/theme.rasi
+
     # TODO: Karabiner
     ~/.yabairc:
       path: .yabairc
