--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -17,7 +17,16 @@
     ~/.config/nvim/init.vim: init.vim
     ~/.config/rofi/config.rasi: rofi/config.rasi
     ~/.config/rofi/theme.rasi: rofi/theme.rasi
-
+    ~/.themes/nos-dark/: 
+      create: true
+      glob: true
+      path: gnome/nos-dark/*
+      if: "[ $XDG_SESSION_DESKTOP = gnome ]"
+    ~/.themes/nos-dark/gtk-3.0/:
+      create: true
+      glob: true
+      path: /usr/share/themes/adw-gtk3-dark/gtk-3.0/*
+      if: "[ $XDG_SESSION_DESKTOP = gnome ]"
     # TODO: Karabiner
     ~/.yabairc:
       path: .yabairc
