redesign vim colorscheme with new theme packages

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,6 +1,7 @@
 {
   "tsserver.enableJavascript": false,
   "snippets.ultisnips.pythonPrompt": false,
+  "Lua.diagnostics.globals": ["vim"],
   "languageserver": {
     "terraform": {
       "command": "terraform-ls",
