--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -28,25 +28,16 @@
       if: "[ $XDG_SESSION_DESKTOP = gnome ]"
     ~/.config/gtk-4.0/gtk.css: gnome/nos-dark/gtk.css
     ~/.config/gtk-3.0/gtk.css: gnome/nos-dark/gtk.css
-    # ~/.themes/nos-dark/gtk-3.0/:
-    #   create: true
-    #   glob: true
-    #   path: /usr/share/themes/adw-gtk3-dark/gtk-3.0/*
-    #   if: "[ $XDG_SESSION_DESKTOP = gnome ]"
-    # ~/.themes/nos-dark/gtk-3.0/:
-    #   create: true
-    #   glob: true
-    #   path: gnome/nos-dark/gtk-4.0/*
-    #   if: "[ $XDG_SESSION_DESKTOP = gnome ]"
-    ~/.config/wireplumber:
-      create: true
-      glob: true
-      path: wireplumber
-      if: "[ $XDG_SESSION_DESKTOP = gnome ]"
+    ~/.config/BetterDiscord/themes/nos.theme.css: discord.css
     ~/.config/spicetify/Themes/nos:
       create: true
       glob: true
       path: spicetify-theme
+      if: "[ $XDG_SESSION_DESKTOP = gnome ]"
+    ~/.config/wireplumber:
+      create: true
+      glob: true
+      path: wireplumber
       if: "[ $XDG_SESSION_DESKTOP = gnome ]"
     ~/.yabairc:
       path: .yabairc
@@ -59,7 +50,7 @@
     # Set gnome themes (if running Gnome)
     - command: gsettings set org.gnome.desktop.interface gtk-theme nos-dark
       if: "[ $XDG_SESSION_DESKTOP = gnome ]"
-    - command: gsettings set org.gnome.desktop.wm.preferences theme nos-dark
+    - command: gsettings set org.gnome.desktop.wm.preferences theme adw-dark
       if: "[ $XDG_SESSION_DESKTOP = gnome ]"
     # Set gnome custom keybinds (if running Gnome)
     - command: ./scripts/set_gnome_keybinds.sh
