--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -115,7 +115,9 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: "Hack Nerd Font"
+    # family: "Hack Nerd Font"
+    # family: "JetBrainsMono Nerd Font"
+    family: "MesloLGLDZ Nerd Font"
 
     # The `style` can be specified to pick a specific face.
     style: Regular
