--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,13 +13,20 @@ bind c new-window -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
-# vim-tmux-navigator
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
-bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
-bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
-bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
+bind-key -n C-h if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
+bind-key -n C-j if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
+bind-key -n C-k if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
+bind-key -n C-l if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
+
+bind-key -n M-h if-shell "$is_vim" 'send-keys M-h' 'resize-pane -L 3'
+bind-key -n M-j if-shell "$is_vim" 'send-keys M-j' 'resize-pane -D 3'
+bind-key -n M-k if-shell "$is_vim" 'send-keys M-k' 'resize-pane -U 3'
+bind-key -n M-l if-shell "$is_vim" 'send-keys M-l' 'resize-pane -R 3'
+
 tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
 if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
     "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
@@ -33,10 +40,10 @@ bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 
 # VIM movement for panes
-bind -n M-l select-pane -R
-bind -n M-k select-pane -U
-bind -n M-j select-pane -D
-bind -n M-h select-pane -L
+#bind -n M-l select-pane -R
+#bind -n M-k select-pane -U
+#bind -n M-j select-pane -D
+#bind -n M-h select-pane -L
 set -s escape-time 0
 
 # Start windows at 1 instead of 0 for ease of 
