--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,7 +6,10 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-# VIM NERDTree splits for windows
+# Reload keybind
+bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+
+# Split mappings for panes
 bind s split-window -v -c "#{pane_current_path}"
 bind i split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
@@ -39,11 +42,6 @@ bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 
-# VIM movement for panes
-#bind -n M-l select-pane -R
-#bind -n M-k select-pane -U
-#bind -n M-j select-pane -D
-#bind -n M-h select-pane -L
 set -s escape-time 0
 
 # Start windows at 1 instead of 0 for ease of 
@@ -55,14 +53,14 @@ set -g pane-base-index 1
 ### DESIGN CHANGES ###
 ######################
 
-# loud or quiet?
+# Disable bell (in tmux)
 set -g visual-activity off
 set -g visual-bell off
 set -g visual-silence off
 setw -g monitor-activity off
-set -g bell-action none
+set -g bell-action any
 
-#  modes
+# modes
 setw -g clock-mode-colour colour166
 setw -g mode-style 'fg=colour1 bg=colour236 bold'
 
@@ -72,7 +70,6 @@ set -g pane-active-border-style 'bg=colour16 fg=colour166'
 
 # messages
 set -g message-style 'fg=colour137 bg=colour235 bold'
-#set -g message-style 'fg=colour232 bg=colour16 bold'
 
 # True Colors Support
 set -g default-terminal "tmux-256color"
