--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,6 +16,9 @@ bind c new-window -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
+# Choose
+bind j choose-tree
+
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
