--- a/alacritty/fonts.yml
+++ b/alacritty/fonts.yml
@@ -6,15 +6,18 @@ font:
     style: Regular
   # Bold font face
   bold:
-    family: "MesloLGLDZ Nerd Font"
+    # family: "MesloLGLDZ Nerd Font"
+    family: "Jetbrains Mono Nerd Font"
     style: Bold
   # Italic font face
   italic:
-    family: "MesloLGLDZ Nerd Font"
+    # family: "MesloLGLDZ Nerd Font"
+    family: "Jetbrains Mono Nerd Font"
     style: Italic
   # Bold italic font face
   bold_italic:
-    family: "MesloLGLDZ Nerd Font"
+    # family: "MesloLGLDZ Nerd Font"
+    family: "Jetbrains Mono Nerd Font"
     style: Bold Italic
   # Point size
   size: 10.0
