--- a/alacritty/colors.yml
+++ b/alacritty/colors.yml
@@ -1,32 +1,63 @@
-# Color Configurations
+# # Color Configurations
+# colors:
+#   # Default colors
+#   primary:
+#    background: '#000000'
+#   vi_mode_cursor:
+#     text: CellBackground
+#     cursor: CellForeground
+#
+#   # Custom Colors
+#   normal:
+#     black: '#000000'
+#     red: '#890000'
+#     green: '#4E9A06'
+#     yellow: '#E6BF0F'
+#     blue: '#3465A4'
+#     magenta: '#e95420'
+#     cyan: '#06989A'
+#     white: '#D3D7CF'
+#   bright:
+#     black:   '#555753'
+#     red:     '#EF2929'
+#     green:   '#8AE234'
+#     yellow: '#FCE94F'
+#     blue: '#739FCF'
+#     magenta: '#AD7FA8'
+#     cyan: '#34E2E2'
+#     white: '#EEEEEC'
+#
+#   # Indexed Colors
+#   indexed_colors:
+#     - { index: 166, color: '#e95420' }
+# Colors (Ayu Dark)
 colors:
   # Default colors
   primary:
-   background: '#000000'
-  vi_mode_cursor:
-    text: CellBackground
-    cursor: CellForeground
+    background: '0x0A0E14'
+    foreground: '0xB3B1AD'
 
-  # Custom Colors
+  # Normal colors
   normal:
-    black: '#000000'
-    red: '#890000'
-    green: '#4E9A06'
-    yellow: '#E6BF0F'
-    blue: '#3465A4'
-    magenta: '#e95420'
-    cyan: '#06989A'
-    white: '#D3D7CF'
-  bright:
-    black:   '#555753'
-    red:     '#EF2929'
-    green:   '#8AE234'
-    yellow: '#FCE94F'
-    blue: '#739FCF'
-    magenta: '#AD7FA8'
-    cyan: '#34E2E2'
-    white: '#EEEEEC'
+    black:   '0x01060E'
+    red:     '0xEA6C73'
+    green:   '0x91B362'
+    yellow:  '0xF9AF4F'
+    blue:    '0x53BDFA'
+    magenta: '0xFAE994'
+    cyan:    '0x90E1C6'
+    white:   '0xC7C7C7'
 
-  # Indexed Colors
-  indexed_colors: 
+  # Bright colors
+  bright:
+    black:   '0x686868'
+    red:     '0xF07178'
+    green:   '0xC2D94C'
+    yellow:  '0xFFB454'
+    blue:    '0x59C2FF'
+    magenta: '0xFFEE99'
+    cyan:    '0x95E6CB'
+    white:   '0xFFFFFF'
+
+  indexed_colors:
     - { index: 166, color: '#e95420' }
