feat: waybar output icons, wlogout fix, dunst styling

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,5 +1,6 @@
 # Monitors
 monitor=DP-1,highrr,0x0,1
+# monitor=DP-1,vrr,0x0,1
 monitor=HDMI-A-1,highres,2560x-1000,1,transform,1
 monitor=DP-2,preferred,0x-1440,1
 
@@ -26,7 +27,7 @@ exec-once=streamdeck --no-ui
 env = XCURSOR_SIZE,24
 env = WLR_NO_HARDWARE_CURSORS,1
 env = MOZ_ENABLE_WAYLAND,1
-# env = WLR_DRM_NO_ATOMIC,1
+env = WLR_DRM_NO_ATOMIC,1
 
 # Input Configuration
 input {
@@ -36,7 +37,9 @@ input {
     kb_options =
     kb_rules =
 
-    follow_mouse = 1
+    follow_mouse = 2
+    mouse_refocus = false
+    # follow_mouse = 1
 
     touchpad {
         natural_scroll = no
@@ -53,9 +56,9 @@ general {
     col.active_border = rgba(e95420ee) rgba(e9a320ee) 45deg
     col.inactive_border = rgba(595959aa)
 
-    # allow_tearing = true
-
     layout = dwindle
+
+    allow_tearing = true
 }
 
 # Window Decorations
@@ -105,7 +108,24 @@ gestures {
 }
 
 # Window Rules
-windowrulev2 = pin,class:(org.kde.krunner)
+# windowrulev2 = center class:(org.kde.krunner)
+#
+# windowrulev2 = forceinput,class:(org.kde.krunner)
+# windofloat 2560 1380,title:^(waybar)
+windowrulev2 = float,title:^(waybar)
+windowrulev2 = noborder,title:^(waybar)
+
+# windowrulev2 = stayfocused,class:(albert)
+# windowrulev2 = fakefullscreen,class:(albert)
+# windowrulev2 = maximize,class:(albert)
+windowrulev2 = stayfocused,class:(albert)
+windowrulev2 = windowdance,class:(albert)
+windowrulev2 = noborder,class:(albert)
+windowrulev2 = center,class:(albert)
+# windowrulev2 = noblur,class:(albert)
+windowrulev2 = float,class:(albert)
+
+layerrule = blur,waybar
 
 # Keybinds
 $mainMod = SUPER
@@ -116,7 +136,8 @@ bind = $mainMod, M, exec, wlogout
 bind = $mainMod, L, exec, swaylock --screenshots --clock --indicator --indicator-radius 100 --indicator-thickness 7 --effect-blur 7x5 --effect-vignette 0.5:0.5 --ring-color 1f2430 --key-hl-color e95420 --line-color 00000000 --inside-color 00000088 --separator-color 00000000 --grace 2 --fade-in 0.2
 bind = $mainMod, E, exec, nautilus
 bind = $mainMod, F, togglefloating, 
-bind = ALT, Space, exec, krunner
+bind = ALT, Space, exec, wofi
+# bind = ALT, Space, exec, krunner
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, O, togglesplit, # dwindle
 bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy
