fix: hyprland nvidia configuration

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -13,12 +13,14 @@ workspace=name:right-monitor, monitor:HDMI2-A-1, persistent:true
 workspace=name:top-monitor, monitor:DP-2, persistent:true
 
 # Startup applications
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=/usr/lib/polkit-kde-authentication-agent-1
 exec-once=swayidle -w
 exec-once=dunst
 exec-once=waybar
 exec-once=hyprpaper
 exec-once=streamdeck --no-ui
+exec-once=QT_QPA_PLATFORM=xcb /opt/piavpn/bin/pia-client
 
 # Import Configurations
 # source = ~/.config/hypr/colors.conf
@@ -28,6 +30,11 @@ env = XCURSOR_SIZE,24
 env = WLR_NO_HARDWARE_CURSORS,1
 env = MOZ_ENABLE_WAYLAND,1
 env = WLR_DRM_NO_ATOMIC,1
+env = SSH_AUTH_SOCK,$XDG_RUNTIME_DIR/ssh-agent.socket
+env = LIBVA_DRIVER_NAME,nvidia
+env = XDG_SESSION_TYPE,wayland
+env = GBM_BACKEND,nvidia-drm
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
 # Input Configuration
 input {
@@ -122,6 +129,7 @@ windowrulev2 = stayfocused,class:(albert)
 windowrulev2 = windowdance,class:(albert)
 windowrulev2 = noborder,class:(albert)
 windowrulev2 = center,class:(albert)
+# windowrulev2 = float,title:private
 # windowrulev2 = noblur,class:(albert)
 windowrulev2 = float,class:(albert)
 
@@ -132,7 +140,7 @@ $mainMod = SUPER
 
 bind = $mainMod, Return, exec, alacritty
 bind = $mainMod, Q, killactive, 
-bind = $mainMod, M, exec, wlogout 
+bind = $mainMod, M, exec, wlogout --protocol layer-shell
 bind = $mainMod, L, exec, swaylock --screenshots --clock --indicator --indicator-radius 100 --indicator-thickness 7 --effect-blur 7x5 --effect-vignette 0.5:0.5 --ring-color 1f2430 --key-hl-color e95420 --line-color 00000000 --inside-color 00000088 --separator-color 00000000 --grace 2 --fade-in 0.2
 bind = $mainMod, E, exec, nautilus
 bind = $mainMod, F, togglefloating, 
